[change] AdapterDelegate v2: was added AllVacanciesTopSectionAdapterDelegate for switching between both all vacancies and 3 vacancies state; were added listeners for interaction with UI for this switching; [add] DB for saving vacancy/ loading them? and updating

--- a/feature-main/src/main/res/values/strings.xml
+++ b/feature-main/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="button_vacancies_title">Еще %1$s</string>
     <string name="vacancy_published_date">Опубликовано %1$s</string>
     <string name="looking_number_text">Сейчас просматривает %1$s</string>
+    <string name="additional_filter_text">По соответствию</string>
 </resources>
